--- a/Demo_PersistenceFileStream.Object/Demo_PersistenceFileStream.Object.csproj
+++ b/Demo_PersistenceFileStream.Object/Demo_PersistenceFileStream.Object.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Models\HighScore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\ConsoleMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
